# cross-platform-api

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
binding/: CMakeLists.txt
binding/dotnet/Sample/: CMakeLists.txt  Sample.i
binding/python/: CMakeLists.txt  setup.py.in
binding/python/src/Sample/: CMakeLists.txt
binding/python/tests/: CMakeLists.txt
binding/python/tests/Sample/: CMakeLists.txt
cmake/: CompilerFlags.cmake  ProjectUtils.cmake  Python.cmake  Swig.cmake
cpp/Sample/: CMakeLists.txt
cpp/Sample/src/: sample.cpp
dotnet/: CMakeLists.txt  Directory.Build.props.in  template.csproj.in  template.runtime.csproj.in
dotnet/Sample/: CMakeLists.txt  Sample.i
dotnet/src/: CMakeLists.txt
dotnet/src/Sample/: CMakeLists.txt
dotnet/tests/Sample/: SampleTest.cs
java/: CMakeLists.txt  Loader.java  pom-full.xml.in  pom-local.xml.in  pom-native.xml.in  pom-test.xml.in
java/src/: CMakeLists.txt
java/src/Sample/: CMakeLists.txt  Sample.i
modules/: CMakeLists.txt
modules/Sample/: CMakeLists.txt
modules/Sample/include/: sample.hpp
modules/Sample/python/: CMakeLists.txt  Sample.i
modules/Sample/src/: CMakeLists.txt
modules/sample/: CMakeLists.txt
modules/sample/include/: sample.hpp
modules/sample/python/: CMakeLists.txt  Sample.i
modules/sample/src/: sample.cpp
modules/sample/tests/: CMakeLists.txt  SampleTest.cpp
package/: CMakeLists.txt
package/python/: CMakeLists.txt
python/: CMakeLists.txt
python/src/Sample/: CMakeLists.txt
python/tests/Sample/: Sample.py
scripts/: Builder.ps1  build.ps1  vcpkg.ps1
tests/: CMakeLists.txt
tests/python/: CMakeLists.txt
